Name:           smtlib2
Version:        0.1
Author:         Henning Günther <guenther@forsyte.at>
Build-Type:     Simple
Cabal-Version:  >=1.2

Flag WithConstraints
  Description: Enables the use of the constraint-kind extension which is needed to parse 'map'-expressions.
  Default: True
Flag WithDataKinds
  Description: Enables the use of the data-kinds extension which is needed for typed bitvectors.
  Default: False

Library
  Build-Depends:        base >= 4,text,mtl,process,blaze-builder,bytestring,
                        attoparsec,atto-lisp >= 0.2,array,template-haskell,
                        containers, transformers, fgl, data-fix, tagged
  Extensions: GADTs,RankNTypes,CPP,ScopedTypeVariables,
              MultiParamTypeClasses,FlexibleContexts,OverloadedStrings,
              DeriveFunctor,FlexibleInstances,DeriveTraversable,DeriveFoldable
  if flag(WithConstraints)
    Build-Depends:      constraints
    CPP-Options: -DSMTLIB2_WITH_CONSTRAINTS
  if flag(WithDataKinds)
    Extensions: DataKinds,PolyKinds
    CPP-Options: -DSMTLIB2_WITH_DATAKINDS
  
  GHC-Options: -fwarn-unused-imports
  Exposed-Modules:
    Language.SMTLib2
    Language.SMTLib2.Solver
    Language.SMTLib2.TH
    Language.SMTLib2.Connection
    Language.SMTLib2.Internals
    Language.SMTLib2.Internals.Instances
    Language.SMTLib2.Internals.Interface
    Language.SMTLib2.Internals.Optimize
    Language.SMTLib2.Pipe
    Data.Unit
    