Name:           smtlib2
Version:        0.3
Author:         Henning Günther <guenther@forsyte.at>
Maintainer:     guenther@forsyte.at
Synopsis:       A type-safe interface to communicate with an SMT solver.
Stability:      provisional
Category:       SMT, Formal Methods, Theorem Provers, Symbolic Computation
License:        GPL-3
License-File:   LICENSE
Build-Type:     Simple
Cabal-Version:  >=1.6

Source-Repository head
  Type:         git
  Location:     https://github.com/hguenther/smtlib2.git

Flag WithConstraints
  Description: Enables the use of the constraint-kind extension which is needed to parse 'map'-expressions.
  Default: True
Flag WithDataKinds
  Description: Enables the use of the data-kinds extension which is needed for typed bitvectors.
  Default: False

Library
  Build-Depends: base >=4 && <5, constraints, mtl, containers, template-haskell, dependent-sum, dependent-map
  Extensions: GADTs,FlexibleContexts,FlexibleInstances,ExistentialQuantification,KindSignatures,DataKinds,TypeFamilies,AllowAmbiguousTypes,TypeOperators,MultiParamTypeClasses,ScopedTypeVariables,RankNTypes,UndecidableInstances,GeneralizedNewtypeDeriving,DeriveDataTypeable,CPP,PolyKinds,StandaloneDeriving,EmptyDataDecls
  if impl(ghc < 7.10) {
    Extensions: PolyKinds,StandaloneDeriving
  }
  GHC-Options: -fwarn-unused-imports
  Exposed-Modules:
                  Language.SMTLib2.Internals.Backend
                  --Language.SMTLib2.Internals.Embed
                  Language.SMTLib2.Internals.Expression
                  Language.SMTLib2.Internals.Monad
                  Language.SMTLib2.Internals.Type
                  Language.SMTLib2.Internals.Type.Nat
                  Language.SMTLib2.Internals.TH
                  Language.SMTLib2.Strategy
                  Language.SMTLib2
                  --Language.SMTLib2.LowLevel
                  Language.SMTLib2.Internals.Evaluate