Name:           smtlib2
Version:        1.0
Author:         Henning Günther <guenther@forsyte.at>
Maintainer:     guenther@forsyte.at
Synopsis:       A type-safe interface to communicate with an SMT solver.
Stability:      provisional
Category:       SMT, Formal Methods, Theorem Provers, Symbolic Computation
License:        GPL-3
License-File:   LICENSE
Build-Type:     Simple
Cabal-Version:  >=1.6

Source-Repository head
  Type:         git
  Location:     https://github.com/hguenther/smtlib2.git

Flag Base4_8
  Description: Build with a newer base module
  Default: True
  Manual: False
  
Library
  Build-Depends: constraints, mtl, containers, template-haskell, haskell-src-meta, dependent-sum, dependent-map
  if flag(Base4_8)
     Build-Depends: base >= 4.8 && < 5
  else
     Build-Depends: base >= 4 && < 5, transformers
  Extensions:
             GADTs
             FlexibleContexts
             FlexibleInstances
             ExistentialQuantification
             KindSignatures
             DataKinds
             TypeFamilies
             TypeOperators
             MultiParamTypeClasses
             ScopedTypeVariables
             RankNTypes
             UndecidableInstances
             GeneralizedNewtypeDeriving
             DeriveDataTypeable
             CPP
             PolyKinds
             StandaloneDeriving
             EmptyDataDecls
             PatternSynonyms
             ViewPatterns
             TemplateHaskell
             QuasiQuotes
             AllowAmbiguousTypes
  GHC-Options: -fwarn-unused-imports -fprint-explicit-kinds
  Exposed-Modules:
                  Language.SMTLib2.Internals.Backend
                  Language.SMTLib2.Internals.Embed
                  Language.SMTLib2.Internals.Expression
                  Language.SMTLib2.Internals.Monad
                  Language.SMTLib2.Internals.Type
                  Language.SMTLib2.Internals.Type.Nat
                  Language.SMTLib2.Internals.Type.List
                  Language.SMTLib2.Internals.Type.Struct
                  Language.SMTLib2.Internals.TH
                  Language.SMTLib2.Strategy
                  Language.SMTLib2
                  Language.SMTLib2.Internals.Evaluate
                  Language.SMTLib2.Internals.Interface
                  Language.SMTLib2.Internals.Proof
                  Language.SMTLib2.Internals.Proof.Verify