Name:           smtlib2-boolector
Version:        0.1
Author:         Henning Günther <guenther@forsyte.at>
Build-Type:     Simple
Cabal-Version:  >=1.2

Library
  Build-Depends:        base >= 4,smtlib2 >= 0.1,containers,data-fix,tagged
  Extensions: 		ForeignFunctionInterface,CApiFFI,CPP,
                        GeneralizedNewtypeDeriving,MultiParamTypeClasses,
                        GADTs,ScopedTypeVariables
  Extra-Libraries:	boolector,lgl,minisat,picosat,stdc++

  GHC-Options: -fwarn-unused-imports
  Exposed-Modules:
    Language.SMTLib2.Boolector