Name:           smtlib2-debug
Version:        0.1
Author:         Henning Günther <guenther@forsyte.at>
Build-Type:     Simple
Cabal-Version:  >=1.2

Library
  Build-Depends:        base >= 4,smtlib2 >= 0.1, ansi-terminal >= 0.5, mtl
  Extensions:		FlexibleInstances,MultiParamTypeClasses
  GHC-Options: -fwarn-unused-imports
  Exposed-Modules:
    Language.SMTLib2.Debug