Name:           smtlib2-pipe
Version:        0.3
Author:         Henning Günther <guenther@forsyte.at>
Maintainer:     guenther@forsyte.at
Synopsis:       A type-safe interface to communicate with an SMT solver.
Stability:      provisional
Category:       SMT, Formal Methods, Theorem Provers, Symbolic Computation
License:        GPL-3
License-File:   LICENSE
Build-Type:     Simple
Cabal-Version:  >=1.6

Source-Repository head
  Type:         git
  Location:     https://github.com/hguenther/smtlib2.git

Library
  Build-Depends: smtlib2 ==0.3, base >=4 && <5, text, containers, process, atto-lisp >=0.2, attoparsec, mtl, constraints, bytestring, blaze-builder, dependent-sum, transformers
  Extensions: GADTs,FlexibleContexts,FlexibleInstances,ExistentialQuantification,KindSignatures,DataKinds,TypeFamilies,AllowAmbiguousTypes,TypeOperators,MultiParamTypeClasses,OverloadedStrings,ScopedTypeVariables,RankNTypes,GeneralizedNewtypeDeriving,ViewPatterns,CPP,StandaloneDeriving
  GHC-Options: -fwarn-unused-imports
  Exposed-Modules:
    Language.SMTLib2.Pipe
