Name:           smtlib2-stp
Version:        0.1
Author:         Henning Günther <guenther@forsyte.at>
Build-Type:     Simple
Cabal-Version:  >=1.2

Library
  Build-Depends:        base >= 4,smtlib2 >= 0.1,containers,data-fix,tagged
  Extensions: 		ForeignFunctionInterface,CApiFFI,CPP,
                        GeneralizedNewtypeDeriving,MultiParamTypeClasses,
                        GADTs,ScopedTypeVariables,RankNTypes,FlexibleContexts
  Extra-Libraries:	stp

  GHC-Options: -fwarn-unused-imports
  Exposed-Modules:
    Language.SMTLib2.STP