Name:           smtlib2-timing
Version:        0.1
Author:         Henning Günther <guenther@forsyte.at>
License:        GPL-3
License-File:   LICENSE
Build-Type:     Simple
Cabal-Version:  >=1.2

Library
  Build-Depends:        base >= 4,smtlib2 >= 0.1, time, mtl
  Extensions:		FlexibleInstances,MultiParamTypeClasses,FlexibleContexts,TypeFamilies,GADTs,DeriveDataTypeable
  GHC-Options: -fwarn-unused-imports
  Exposed-Modules:
    Language.SMTLib2.Timing