Name:           smtlib2-timing
Version:        1.0
Author:         Henning Günther <guenther@forsyte.at>
License:        GPL-3
License-File:   LICENSE
Build-Type:     Simple
Cabal-Version:  >=1.2

Library
  Build-Depends:        base >= 4,smtlib2 >= 1.0 && < 1.1, time, mtl, dependent-sum
  Extensions:		FlexibleInstances,MultiParamTypeClasses,FlexibleContexts,
                        TypeFamilies,GADTs,DeriveDataTypeable,StandaloneDeriving,
                        GeneralizedNewtypeDeriving,DataKinds
  GHC-Options: -fwarn-unused-imports
  Exposed-Modules:
    Language.SMTLib2.Timing