Name:           smtlib2-z3
Version:        0.1
Author:         Henning Günther <guenther@forsyte.at>
License:        GPL-3
Build-Type:     Simple
Cabal-Version:  >=1.2

Library
  Build-Depends:        base >= 4,smtlib2 >= 0.2,z3 >= 4,containers
  Extensions:           TypeFamilies,DataKinds,ScopedTypeVariables
  Exposed-Modules:
    Language.SMTLib2.Z3
