Name:           smtlib2-quickcheck
Version:        0.3
Author:         Henning Günther <guenther@forsyte.at>
Maintainer:     guenther@forsyte.at
Synopsis:       Helper functions to create SMTLib expressions in QuickCheck
Stability:      provisional
Category:       SMT, Formal Methods, Theorem Provers, Symbolic Computation
License:        GPL-3
License-File:   LICENSE
Build-Type:     Simple
Cabal-Version:  >=1.6

Source-Repository head
  Type:         git
  Location:     https://github.com/hguenther/smtlib2.git

Flag Base4_8
  Description: Build with a newer base module
  Default: True
  Manual: False
  
Library
  Build-Depends: containers, mtl, dependent-sum, dependent-map, smtlib2 >= 0.3 && < 0.4, QuickCheck
  if flag(Base4_8)
     Build-Depends: base >= 4.8 && < 5
  else
     Build-Depends: base >= 4 && < 5, transformers
  Exposed-Modules:
    Language.SMTLib2.QuickCheck